################################################################################
Jadecy X.X, XXXX/XX/XX

- Upgraded javadoc and tests for byte size computations.

################################################################################
Jadecy 2.0, 2019/04/28

- Corrected bug in DepUnit, where checkDeps(...) method would ignore
  dependencies to elements (classes or packages) contained within
  begin elements set ("mustIncludeDepsToBeginSet" was false instead of true).

- Moved name utilities in the new net.jadecy.names package.

- In net.jadecy.comp package, use of JavaCompiler and JarOutputStream instead
  of javac and jar executables, and API rework/cleanup.
  As a result, JavacHelper class now requires Java 6+.

- Aligned src/build code on Jafama 2.3.1 src/build
  (for homogeneity, and for https://github.com/jeffhain/jafama/issues/4).
  The main builds the jar with JavaCompiler and JarOutputStream (was previously
  built using JDK5 javac and jar executables).
  Also now compiled with "-g:vars" option, for proper arguments names instead
  of arg0, arg1, etc., and the manifest contains the implementation version.

- Removed AllTests class (instead just launch tests from the IDE project).

- Restored @Override annotations (were causing issue with bad IDE config).

- Comments upgrades.

- Moved change log from README to the new CHANGELOG.txt file,
  and changed README to use Markdown.

################################################################################
Jadecy 1.1.1, 2016/03/24

- Added handling of packages and classes names with dollar signs (other than
  added by compiler before nested classes), as follows:
  - Top level classes names are now properly computed even if the package name
    contains a dollar sign.
  - Classes names minus package, starting or ending with a dollar sign (like
    "$" or "A$B$"), or containing two consecutive dollar signs (like "A$$B"),
    are considered to be top level classes names.